--- a/apps/browser/src/platform/popup/layout/popup-footer.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-footer.component.html
@@ -1,6 +1,6 @@
 <footer class="tw-p-3 tw-border-0 tw-border-solid tw-border-t tw-border-secondary-300">
   <div class="tw-max-w-screen-sm tw-mx-auto">
-    <div class="tw-flex tw-justify-start">
+    <div class="tw-flex tw-justify-start tw-gap-2">
       <ng-content></ng-content>
     </div>
   </div>
