--- a/apps/browser/src/platform/popup/layout/popup-header.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-header.component.html
@@ -4,14 +4,12 @@
   <div class="tw-max-w-screen-sm tw-mx-auto tw-flex tw-justify-between tw-w-full">
     <div class="tw-inline-flex tw-items-center tw-gap-2 tw-h-9">
       <button
-        class="tw-bg-transparent tw-border-none tw-text-main"
+        bitIconButton="bwi-back"
         type="button"
         *ngIf="showBackButton"
         title="Back"
         aria-label="Back"
-      >
-        <i class="bwi bwi-back" aria-hidden="true"></i>
-      </button>
+      ></button>
       <h1 bitTypography="h3" class="!tw-mb-0.5 tw-text-headers">{{ pageTitle }}</h1>
     </div>
     <div class="tw-inline-flex tw-items-center tw-gap-2 tw-h-9">
