css compatibility with extension code

--- a/apps/browser/src/popup/scss/base.scss
+++ b/apps/browser/src/popup/scss/base.scss
@@ -68,7 +68,7 @@ img {
   border: none;
 }
 
-a:not(popup-page a) {
+a:not(popup-page a, popup-tab-navigation a) {
   text-decoration: none;
 
   @include themify($themes) {
