--- a/libs/components/src/tw-theme.css
+++ b/libs/components/src/tw-theme.css
@@ -17,7 +17,11 @@
   --color-background-alt3: 18 82 163;
   --color-background-alt4: 13 60 119;
 
+  /* Can only be used behind the extension refresh flag */
+  --color-primary-100: 200 217 249;
   --color-primary-300: 103 149 232;
+  /* Can only be used behind the extension refresh flag */
+  --color-primary-500: 23 93 220;
   --color-primary-600: 23 93 220;
   --color-primary-700: 18 82 163;
 
@@ -61,7 +65,9 @@
   --color-background-alt3: 47 52 61;
   --color-background-alt4: 16 18 21;
 
+  --color-primary-100: 8 31 73;
   --color-primary-300: 23 93 220;
+  --color-primary-500: 54 117 232;
   --color-primary-600: 106 153 240;
   --color-primary-700: 180 204 249;
 
