--- a/bitwarden_license/bit-web/src/app/secrets-manager/integrations/integration-card/integration-card.component.html
+++ b/bitwarden_license/bit-web/src/app/secrets-manager/integrations/integration-card/integration-card.component.html
@@ -19,6 +19,7 @@
       class="tw-block tw-mb-0 tw-font-bold hover:tw-no-underline focus:tw-outline-none after:tw-content-[''] after:tw-block after:tw-absolute after:tw-w-full after:tw-h-full after:tw-left-0 after:tw-top-0"
       [href]="linkURL"
       [rel]="[externalURL ? 'noopener noreferrer' : null]"
+      target="_blank"
     >
       {{ linkText }}
     </a>
