--- a/apps/web/src/app/vault/components/vault-items/vault-collection-row.component.html
+++ b/apps/web/src/app/vault/components/vault-items/vault-collection-row.component.html
@@ -74,30 +74,15 @@
   ></button>
   <bit-menu #collectionOptions>
     <!-- collection addAccess logic put here to allow Owners/Admins to edit an orphaned collection -->
-    <button
-      *ngIf="canEditCollection || (collection.addAccess && collection.id !== Unassigned)"
-      type="button"
-      bitMenuItem
-      (click)="edit()"
-    >
+    <button *ngIf="canEditCollection" type="button" bitMenuItem (click)="edit()">
       <i class="bwi bwi-fw bwi-pencil-square" aria-hidden="true"></i>
       {{ "editInfo" | i18n }}
     </button>
-    <button
-      *ngIf="canEditCollection || (collection.addAccess && collection.id !== Unassigned)"
-      type="button"
-      bitMenuItem
-      (click)="access()"
-    >
+    <button *ngIf="canEditCollection" type="button" bitMenuItem (click)="access()">
       <i class="bwi bwi-fw bwi-users" aria-hidden="true"></i>
       {{ "access" | i18n }}
     </button>
-    <button
-      *ngIf="canDeleteCollection || (collection.addAccess && collection.id !== Unassigned)"
-      type="button"
-      bitMenuItem
-      (click)="deleteCollection()"
-    >
+    <button *ngIf="canDeleteCollection" type="button" bitMenuItem (click)="deleteCollection()">
       <span class="tw-text-danger">
         <i class="bwi bwi-fw bwi-trash" aria-hidden="true"></i>
         {{ "delete" | i18n }}
