--- a/libs/components/src/item/item-content.component.html
+++ b/libs/components/src/item/item-content.component.html
@@ -1,7 +1,7 @@
 <div class="tw-flex tw-gap-2 tw-items-center">
   <ng-content select="[slot=start]"></ng-content>
 
-  <div class="tw-flex tw-flex-col tw-items-start">
+  <div class="tw-flex tw-flex-col tw-items-start tw-text-main">
     <div>
       <ng-content></ng-content>
     </div>
