--- a/libs/components/src/item/item.component.html
+++ b/libs/components/src/item/item.component.html
@@ -16,6 +16,6 @@
     class="tw-p-2 tw-flex tw-gap-1 tw-items-center"
     [hidden]="endSlot.childElementCount === 0"
   >
-    <ng-content select="[slot=end-actions]"></ng-content>
+    <ng-content select="[slot=end]"></ng-content>
   </div>
 </div>
