break up name+count method into two separate ones for cipher report component

--- a/apps/web/src/app/tools/reports/pages/reused-passwords-report.component.html
+++ b/apps/web/src/app/tools/reports/pages/reused-passwords-report.component.html
@@ -27,8 +27,8 @@
       >
         <ng-container *ngFor="let status of filterStatus">
           <bit-toggle [value]="status">
-            {{ getOrgValues(status, "name") }}
-            <span bitBadge variant="info"> {{ getOrgValues(status, "count") }} </span>
+            {{ getName(status) }}
+            <span bitBadge variant="info"> {{ getCount(status) }} </span>
           </bit-toggle>
         </ng-container>
       </bit-toggle-group>
