--- a/apps/browser/src/auth/popup/home.component.html
+++ b/apps/browser/src/auth/popup/home.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="box">
         <button type="submit" class="btn primary block">
-          <b>{{ "continue" | i18n }}</b>
+          <b>{{ "continues" | i18n }}</b>
         </button>
       </div>
     </form>
