--- a/apps/web/src/app/layouts/product-switcher/product-switcher-content.component.html
+++ b/apps/web/src/app/layouts/product-switcher/product-switcher-content.component.html
@@ -22,7 +22,7 @@
       >
         <i class="bwi {{ product.icon }} tw-text-4xl !tw-m-0 !tw-mb-1"></i>
         <span
-          class="tw-max-w-24 tw-text-center w-text-center tw-text-sm tw-leading-snug group-hover:tw-underline"
+          class="tw-max-w-24 tw-text-center tw-text-sm tw-leading-snug group-hover:tw-underline"
           >{{ product.name }}</span
         >
       </a>
