--- a/apps/web/src/404/styles.css
+++ b/apps/web/src/404/styles.css
@@ -1,5 +1,7 @@
-@font-face {
-  font-family: "Open Sans";
+/* TODO: the fonts on this page are broken on prod */
+
+/* @font-face {
+  font-family: "DM Sans";
   font-style: italic;
   font-weight: 300;
   src: url(../fonts/Open_Sans-italic-300.woff) format("woff");
@@ -7,7 +9,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: italic;
   font-weight: 400;
   src: url(../fonts/Open_Sans-italic-400.woff) format("woff");
@@ -15,7 +17,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: italic;
   font-weight: 600;
   src: url(../fonts/Open_Sans-italic-600.woff) format("woff");
@@ -23,7 +25,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: italic;
   font-weight: 700;
   src: url(../fonts/Open_Sans-italic-700.woff) format("woff");
@@ -31,7 +33,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: italic;
   font-weight: 800;
   src: url(../fonts/Open_Sans-italic-800.woff) format("woff");
@@ -39,7 +41,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 300;
   src: url(../fonts/Open_Sans-normal-300.woff) format("woff");
@@ -47,7 +49,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 400;
   src: url(../fonts/Open_Sans-normal-400.woff) format("woff");
@@ -55,7 +57,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 600;
   src: url(../fonts/Open_Sans-normal-600.woff) format("woff");
@@ -63,7 +65,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 700;
   src: url(../fonts/Open_Sans-normal-700.woff) format("woff");
@@ -71,15 +73,15 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 800;
   src: url(../fonts/Open_Sans-normal-800.woff) format("woff");
   unicode-range: U+0-10FFFF;
-}
+} */
 
 body {
-  font-family: "Open Sans";
+  font-family: "DM Sans";
 }
 
 html,
@@ -100,7 +102,7 @@ h2 {
   font-size: 23px;
   line-height: 25px;
   color: #fff;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .banner {
