update file name

--- a/libs/angular/src/scss/webfonts.css
+++ b/libs/angular/src/scss/webfonts.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "DM Sans";
   src:
-    url("webfonts/DMSans[opsz,wght].woff2") format("woff2 supports variations"),
-    url("webfonts/DMSans[opsz,wght].woff2") format("woff2-variations");
+    url("webfonts/dm-sans[opsz,wght].woff2") format("woff2 supports variations"),
+    url("webfonts/dm-sans[opsz,wght].woff2") format("woff2-variations");
   font-display: swap;
 }
