[AC-1707] Avoid 'readonly' collection dialog for providers

--- a/apps/web/src/app/vault/org-vault/vault.component.html
+++ b/apps/web/src/app/vault/org-vault/vault.component.html
@@ -99,8 +99,13 @@
       </bit-no-items>
       <collection-access-restricted
         *ngIf="showCollectionAccessRestricted"
+        [canEditCollection]="organization.isProviderUser"
         (viewCollectionClicked)="
-          editCollection(selectedCollection.node, CollectionDialogTabType.Info, true)
+          editCollection(
+            selectedCollection.node,
+            CollectionDialogTabType.Info,
+            !organization.isProviderUser
+          )
         "
       >
       </collection-access-restricted>
