--- a/bitwarden_license/bit-web/src/app/admin-console/providers/providers-layout.component.html
+++ b/bitwarden_license/bit-web/src/app/admin-console/providers/providers-layout.component.html
@@ -7,7 +7,7 @@
     <bit-nav-item
       icon="bwi-bank"
       [text]="'clients' | i18n"
-      [route]="(hasConsolidatedBilling$ | async) ? 'manage-client-organizations' : 'clients'"
+      [route]="(canAccessBilling$ | async) ? 'manage-client-organizations' : 'clients'"
     ></bit-nav-item>
     <bit-nav-group
       icon="bwi-sliders"
@@ -30,7 +30,7 @@
       icon="bwi-billing"
       [text]="'billing' | i18n"
       route="billing"
-      *ngIf="hasConsolidatedBilling$ | async"
+      *ngIf="canAccessBilling$ | async"
     >
       <bit-nav-item [text]="'subscription' | i18n" route="billing/subscription"></bit-nav-item>
     </bit-nav-group>
