Resolve the  case and ternary operator comment

--- a/apps/web/src/app/billing/organizations/organization-subscription-cloud.component.html
+++ b/apps/web/src/app/billing/organizations/organization-subscription-cloud.component.html
@@ -256,7 +256,7 @@
     </ng-container>
   </ng-container>
 </bit-container>
-<bit-container *ngIf="IsProviderManaged">
+<bit-container *ngIf="isProviderManaged">
   <div
     class="tw-mx-auto tw-flex tw-flex-col tw-items-center tw-justify-center tw-pt-24 tw-text-center tw-font-bold"
   >
