Use "Vault" instead of "Vault settings" as title

--- a/apps/browser/src/vault/popup/settings/vault-settings.component.html
+++ b/apps/browser/src/vault/popup/settings/vault-settings.component.html
@@ -6,7 +6,7 @@
     </button>
   </div>
   <h1 class="center">
-    <span class="title">{{ "vaultSettings" | i18n }}</span>
+    <span class="title">{{ "vault" | i18n }}</span>
   </h1>
   <div class="right">
     <app-pop-out></app-pop-out>
