--- a/apps/browser/src/popup/scss/misc.scss
+++ b/apps/browser/src/popup/scss/misc.scss
@@ -426,6 +426,10 @@ img,
   user-select: none;
 }
 
+.user-select-text {
+  user-select: text;
+}
+
 app-about .modal-body > *,
 app-vault-view .box-footer {
   user-select: auto;
