--- a/apps/browser/src/tools/popup/settings/about/about.component.html
+++ b/apps/browser/src/tools/popup/settings/about/about.component.html
@@ -5,10 +5,13 @@
   <div bitDialogTitle>Bitwarden</div>
   <div bitDialogContent>
     <p>&copy; Bitwarden Inc. 2015-{{ year }}</p>
-    <p>{{ "version" | i18n }}: {{ version$ | async }}</p>
+    <p>
+      {{ "version" | i18n }}: <span class="user-select-text">{{ version$ | async }}</span>
+    </p>
     <ng-container *ngIf="data$ | async as data">
       <p *ngIf="data.isCloud">
-        {{ "serverVersion" | i18n }}: {{ data.serverConfig?.version }}
+        {{ "serverVersion" | i18n }}:
+        <span class="user-select-text">{{ data.serverConfig?.version }}</span>
         <span *ngIf="!data.serverConfig.isValid()">
           ({{ "lastSeenOn" | i18n: (data.serverConfig.utcDate | date: "mediumDate") }})
         </span>
@@ -18,7 +21,9 @@
         <ng-container *ngIf="data.serverConfig.server">
           <p>
             {{ "serverVersion" | i18n }} <small>({{ "thirdParty" | i18n }})</small>:
-            {{ data.serverConfig?.version }}
+            <span class="user-select-text">
+              {{ data.serverConfig?.version }}
+            </span>
             <span *ngIf="!data.serverConfig.isValid()">
               ({{ "lastSeenOn" | i18n: (data.serverConfig.utcDate | date: "mediumDate") }})
             </span>
@@ -30,7 +35,7 @@
 
         <p *ngIf="!data.serverConfig.server">
           {{ "serverVersion" | i18n }} <small>({{ "selfHostedServer" | i18n }})</small>:
-          {{ data.serverConfig?.version }}
+          <span class="user-select-text">{{ data.serverConfig?.version }}</span>
           <span *ngIf="!data.serverConfig.isValid()">
             ({{ "lastSeenOn" | i18n: (data.serverConfig.utcDate | date: "mediumDate") }})
           </span>
