--- a/apps/browser/src/popup/scss/misc.scss
+++ b/apps/browser/src/popup/scss/misc.scss
@@ -424,10 +424,10 @@ img,
 .modal-title,
 .overlay-container {
   user-select: none;
-}
 
-.user-select-text {
-  user-select: text;
+  &.user-select {
+    user-select: auto;
+  }
 }
 
 app-about .modal-body > *,
