--- a/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
+++ b/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
@@ -1,1 +1,13 @@
-<h1>Vault V2 Extension Refresh</h1>
+<popup-page>
+  <!-- Temporary header -->
+  <popup-header pageTitle="Vault" slot="header">
+    <ng-container slot="end">
+      <button bitButton buttonType="primary" type="button">
+        <i class="bwi bwi-plus-f" aria-hidden="true"></i>
+        {{ "new" | i18n }}
+      </button>
+      <app-pop-out></app-pop-out>
+      <app-current-account></app-current-account>
+    </ng-container>
+  </popup-header>
+</popup-page>
