--- a/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
+++ b/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
@@ -6,7 +6,7 @@
     </button>
   </div>
   <h1 class="center">
-    <span class="title">{{ "helpFeedback" | i18n }}</span>
+    <span class="title">{{ "about" | i18n }}</span>
   </h1>
   <div class="right"></div>
 </header>
