--- a/apps/browser/src/tools/popup/settings/settings.component.html
+++ b/apps/browser/src/tools/popup/settings/settings.component.html
@@ -115,9 +115,9 @@
       <button
         type="button"
         class="box-content-row box-content-row-flex text-default"
-        routerLink="/help-and-feedback"
+        routerLink="/about"
       >
-        <div class="row-main">{{ "helpFeedback" | i18n }}</div>
+        <div class="row-main">{{ "about" | i18n }}</div>
         <i class="bwi bwi-angle-right bwi-lg row-sub-icon" aria-hidden="true"></i>
       </button>
       <button
