Move button to open AboutDialog from settings to about-page

--- a/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
+++ b/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
@@ -17,6 +17,14 @@
         type="button"
         class="box-content-row box-content-row-flex text-default"
         appStopClick
+        (click)="about()"
+      >
+        <div class="row-main">{{ "aboutBitwarden" | i18n }}</div>
+      </button>
+      <button
+        type="button"
+        class="box-content-row box-content-row-flex text-default"
+        appStopClick
         (click)="launchHelp()"
       >
         <div class="icon">
