--- a/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
+++ b/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
@@ -37,6 +37,15 @@
         type="button"
         class="box-content-row box-content-row-flex text-default"
         appStopClick
+        (click)="openWebVault()"
+      >
+        <div class="row-main">{{ "bitWebVaultApp" | i18n }}</div>
+        <i class="bwi bwi-external-link bwi-lg row-sub-icon" aria-hidden="true"></i>
+      </button>
+      <button
+        type="button"
+        class="box-content-row box-content-row-flex text-default"
+        appStopClick
         (click)="launchForums()"
       >
         <div class="icon">
