--- a/bitwarden_license/bit-web/src/app/billing/providers/provider-subscription.component.html
+++ b/bitwarden_license/bit-web/src/app/billing/providers/provider-subscription.component.html
@@ -1,17 +1,77 @@
 <app-header></app-header>
+
 <bit-container>
   <ng-container *ngIf="!firstLoaded && loading">
     <i class="bwi bwi-spinner bwi-spin text-muted" title="{{ 'loading' | i18n }}"></i>
     <span class="sr-only">{{ "loading" | i18n }}</span>
   </ng-container>
+
   <ng-container *ngIf="sub && firstLoaded">
-    <ng-container *ngIf="!(showUpdatedSubscriptionStatusSection$ | async)">
-      <bit-callout
-        type="warning"
-        title="{{ 'canceled' | i18n }}"
-        *ngIf="sub.Status == && subscription.cancelled"
-        >{{ "subscriptionCanceled" | i18n }}</bit-callout
+    <ng-container *ngIf="true">
+      <!-- <ng-container *ngIf="!(showUpdatedSubscriptionStatusSection$ | async)"> -->
+      <bit-callout type="warning" title="{{ 'canceled' | i18n }}" *ngIf="false">
+        {{ "subscriptionCanceled" | i18n }}</bit-callout
       >
+      <bit-callout type="warning" title="{{ 'pendingCancellation' | i18n }}" *ngIf="false">
+        <p>{{ "subscriptionPendingCanceled" | i18n }}</p>
+        <button
+          *ngIf="userOrg.canEditSubscription"
+          bitButton
+          buttonType="secondary"
+          [bitAction]="reinstate"
+          type="button"
+        >
+          {{ "reinstateSubscription" | i18n }}
+        </button>
+      </bit-callout>
+
+      <dl class="tw-grid tw-grid-flow-col tw-grid-rows-2">
+        <dt>{{ "billingPlan" | i18n }}</dt>
+        <dd>{{ "Test Plan" }}</dd>
+        <ng-container *ngIf="true">
+          <dt>{{ "status" | i18n }}</dt>
+          <dd>
+            <span class="tw-capitalize">{{ "Active" }}</span>
+            <span bitBadge variant="warning" *ngIf="subscriptionMarkedForCancel">{{
+              "pendingCancellation" | i18n
+            }}</span>
+          </dd>
+          <dt [ngClass]="{ 'tw-text-danger': isExpired }">
+            {{ "subscriptionExpiration" | i18n }}?
+          </dt>
+          <dd [ngClass]="{ 'tw-text-danger': isExpired }">
+            {{ "2022-10-12" | date: "mediumDate" }}
+          </dd>
+        </ng-container>
+      </dl>
     </ng-container>
+  </ng-container>
+
+  <ng-container *ngIf="true">
+    <div class="tw-flex-col">
+      <strong
+        class="tw-block tw-border-0 tw-border-b tw-border-solid tw-border-secondary-300 pb-2"
+        >{{ "billingDetails" | i18n }}</strong
+      >
+      <bit-table>
+        <ng-template body>
+          <ng-container *ngIf="sub">
+            <tr bitRow *ngFor="let i of [1, 2, 3]">
+              <td bitCell class="tw-pl-0 tw-py-3">Teams Organization Seats</td>
+              <td bitCell class="tw-text-right">$800/month</td>
+            </tr>
+            <tr bitRow>
+              <td bitCell class="tw-pl-0 tw-py-3">
+                <span class="tw-text-sm">A 30% discount is applied to you subscription.</span>
+              </td>
+              <td bitCell class="tw-text-right">
+                <span class="tw-font-bold">Total:</span> $2,400/month
+                <span class="tw-text-sm tw-block">As of {{ "2023-0101" | date: "medium" }}</span>
+              </td>
+            </tr>
+          </ng-container>
+        </ng-template>
+      </bit-table>
+    </div>
   </ng-container>
 </bit-container>
