--- a/libs/components/src/chip-select/chip-select.component.html
+++ b/libs/components/src/chip-select/chip-select.component.html
@@ -1,7 +1,11 @@
 <button
   type="button"
   class="tw-border tw-border-solid tw-rounded-3xl tw-border-text-muted tw-px-3 tw-py-1.5 tw-inline-flex tw-gap-1.5 tw-items-center focus-visible:tw-ring focus-visible:tw-ring-offset-1 focus-visible:tw-ring-primary-700 focus-visible:tw-z-10"
-  [ngClass]="selected ? 'tw-bg-text-muted tw-text-contrast hover:tw-bg-secondary-700' : 'tw-bg-background tw-text-muted hover:tw-bg-black/5'"
+  [ngClass]="
+    selected
+      ? 'tw-bg-text-muted tw-text-contrast hover:tw-bg-secondary-700'
+      : 'tw-bg-background tw-text-muted hover:tw-bg-black/5'
+  "
   aria-expanded="false"
   aria-controls="listbox-id"
   buttonType="secondary"
