--- a/apps/web/src/app/vault/components/vault-items/vault-items.component.html
+++ b/apps/web/src/app/vault/components/vault-items/vault-items.component.html
@@ -26,7 +26,7 @@
         <th bitCell class="tw-w-12 tw-text-right">
           <button
             [disabled]="disabled || isEmpty"
-            [bitMenuTriggerFor]="headerMenu"
+            [bitMenuTriggerFor]="vaultBulkManagementActionEnabled ? headerMenuV2 : headerMenu"
             bitIconButton="bwi-ellipsis-v"
             size="small"
             type="button"
@@ -72,6 +72,23 @@
               <span class="tw-text-danger">
                 <i class="bwi bwi-fw bwi-trash" aria-hidden="true"></i>
                 {{ (showBulkTrashOptions ? "permanentlyDeleteSelected" : "deleteSelected") | i18n }}
+              </span>
+            </button>
+          </bit-menu>
+
+          <bit-menu #headerMenuV2>
+            <button type="button" bitMenuItem>
+              <i class="bwi bwi-fw bwi-folder" aria-hidden="true"></i>
+              {{ "addToFolder" | i18n }}
+            </button>
+            <button type="button" bitMenuItem>
+              <i class="bwi bwi-fw bwi-collection" aria-hidden="true"></i>
+              {{ "assignToCollections" | i18n }}
+            </button>
+            <button type="button" bitMenuItem>
+              <span class="tw-text-danger">
+                <i class="bwi bwi-fw bwi-trash" aria-hidden="true"></i>
+                {{ "delete" | i18n }}
               </span>
             </button>
           </bit-menu>
