force active styles for navigation items

--- a/apps/web/src/app/layouts/product-switcher/navigation-switcher/navigation-switcher.component.html
+++ b/apps/web/src/app/layouts/product-switcher/navigation-switcher/navigation-switcher.component.html
@@ -6,6 +6,7 @@
     [text]="product.name"
     [route]="product.appRoute"
     [attr.icon]="product.icon"
+    [forceActiveStyles]="product.isActive"
   >
   </bit-nav-item>
   <ng-container *ngIf="moreProducts$ | async as moreProducts">
