Apply discount on the displayed amount

--- a/bitwarden_license/bit-web/src/app/billing/providers/provider-subscription.component.html
+++ b/bitwarden_license/bit-web/src/app/billing/providers/provider-subscription.component.html
@@ -51,7 +51,9 @@
                 }}
               </td>
               <td bitCell class="tw-text-right">
-                {{ i.cost | currency: "$" }} /{{ "month" | i18n }}
+                {{ ((100 - subscription.discountPercentage) / 100) * i.cost | currency: "$" }} /{{
+                  "month" | i18n
+                }}
               </td>
             </tr>
             <tr bitRow>
