--- a/libs/components/src/chip-select/chip-select.component.html
+++ b/libs/components/src/chip-select/chip-select.component.html
@@ -6,8 +6,13 @@
   #menuTrigger="menuTrigger"
 >
   <i class="bwi {{ icon }}"></i>
-  {{ placeholder }}
-  <i class="bwi" [ngClass]="menuTrigger.isOpen ? 'bwi-angle-up' : 'bwi-angle-down'"></i>
+  {{ selected?.label || placeholder }}
+  <i
+    *ngIf="!selected?.label"
+    class="bwi"
+    [ngClass]="menuTrigger.isOpen ? 'bwi-angle-up' : 'bwi-angle-down'"
+  ></i>
+  <i *ngIf="selected?.label" class="bwi bwi-close"></i>
 </button>
 <bit-menu #menu>
   <button
@@ -35,8 +40,12 @@
     bitMenuItem
     *ngFor="let option of renderedOptions.children"
     (click)="option.children ? viewOption(option, $event) : selectOption(option, $event)"
+    class="tw-flex tw-justify-between tw-items-center"
   >
-    {{ option.label }}
+    <span class="tw-w-full tw-truncate">
+      <i *ngIf="option.icon" class="bwi {{ icon }}"></i>
+      <span [title]="option.label">{{ option.label }}</span>
+    </span>
     <i *ngIf="option.children" class="bwi bwi-angle-right"></i>
   </button>
 </bit-menu>
