Fix build error

--- a/apps/web/src/app/vault/components/vault-items/vault-items.component.html
+++ b/apps/web/src/app/vault/components/vault-items/vault-items.component.html
@@ -97,6 +97,7 @@
           [canEditCollection]="canEditCollection(item.collection)"
           [canViewCollectionInfo]="canViewCollectionInfo(item.collection)"
           [flexibleCollectionsV1Enabled]="flexibleCollectionsV1Enabled"
+          [restrictProviderAccess]="restrictProviderAccess"
           [checked]="selection.isSelected(item)"
           (checkedToggled)="selection.toggle(item)"
           (onEvent)="event($event)"
