Remove unnecessary If statements

--- a/bitwarden_license/bit-web/src/app/billing/providers/provider-subscription.component.html
+++ b/bitwarden_license/bit-web/src/app/billing/providers/provider-subscription.component.html
@@ -27,7 +27,7 @@
     </dl>
   </ng-container>
 
-  <ng-container *ngIf="true">
+  <ng-container>
     <div class="tw-flex-col">
       <strong class="tw-block tw-border-0 tw-border-b tw-border-solid tw-border-secondary-300 pb-2"
         >{{ "details" | i18n }} &#160;<span
