[PM-6825] Add VaultListItems to VaultV2 component

--- a/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
+++ b/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
@@ -10,4 +10,17 @@
       <app-current-account></app-current-account>
     </ng-container>
   </popup-header>
+  <app-vault-list-items-container
+    title="Auto-fill suggestions"
+    [showAutoFill]="true"
+    [ciphers]="autoFillCiphers$ | async"
+  ></app-vault-list-items-container>
+  <app-vault-list-items-container
+    title="Favorites"
+    [ciphers]="favoriteCiphers$ | async"
+  ></app-vault-list-items-container>
+  <app-vault-list-items-container
+    title="All items"
+    [ciphers]="remainingCiphers$ | async"
+  ></app-vault-list-items-container>
 </popup-page>
