starting browser v2 search

--- a/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
+++ b/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
@@ -1,1 +1,3 @@
 <h1>Vault V2 Extension Refresh</h1>
+
+<app-vault-v2-search (searchTextChanged)="handleSearchTextChange($event)"> </app-vault-v2-search>
