add horizontal margin to icon

--- a/apps/web/src/app/layouts/product-switcher/navigation-switcher/navigation-switcher.component.html
+++ b/apps/web/src/app/layouts/product-switcher/navigation-switcher/navigation-switcher.component.html
@@ -22,7 +22,7 @@
         rel="noreferrer"
         class="tw-flex tw-py-2 tw-px-4 tw-font-semibold !tw-text-alt2 !tw-no-underline hover:tw-bg-primary-300/60 [&>:not(.bwi)]:hover:tw-underline"
       >
-        <i class="bwi bwi-fw {{ more.icon }} tw-mt-1"></i>
+        <i class="bwi bwi-fw {{ more.icon }} tw-mt-1 tw-mx-1"></i>
         <div>
           {{ more.otherProductOverrides?.name ?? more.name }}
           <div *ngIf="more.otherProductOverrides?.supportingText" class="tw-text-xs tw-font-normal">
