[PM-6825] Introduce autofill-vault-list-items.component to encapsulate autofill logic

--- a/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
+++ b/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
@@ -10,11 +10,7 @@
       <app-current-account></app-current-account>
     </ng-container>
   </popup-header>
-  <app-vault-list-items-container
-    title="Auto-fill suggestions"
-    [showAutoFill]="true"
-    [ciphers]="autoFillCiphers$ | async"
-  ></app-vault-list-items-container>
+  <app-autofill-vault-list-items></app-autofill-vault-list-items>
   <app-vault-list-items-container
     title="Favorites"
     [ciphers]="favoriteCiphers$ | async"
