--- a/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
+++ b/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
@@ -2,7 +2,7 @@
   <!-- Temporary header -->
   <popup-header pageTitle="Vault" slot="header">
     <ng-container slot="end">
-      <button bitButton buttonType="primary" type="button">
+      <button bitButton buttonType="primary" type="button" (click)="addCipher()">
         <i class="bwi bwi-plus-f" aria-hidden="true"></i>
         {{ "new" | i18n }}
       </button>
@@ -10,13 +10,40 @@
       <app-current-account></app-current-account>
     </ng-container>
   </popup-header>
-  <app-autofill-vault-list-items></app-autofill-vault-list-items>
-  <app-vault-list-items-container
-    title="Favorites"
-    [ciphers]="favoriteCiphers$ | async"
-  ></app-vault-list-items-container>
-  <app-vault-list-items-container
-    title="All items"
-    [ciphers]="remainingCiphers$ | async"
-  ></app-vault-list-items-container>
+
+  <div *ngIf="showEmptyState$ | async" class="tw-flex tw-flex-col tw-h-full tw-justify-center">
+    <bit-no-items [icon]="vaultIcon">
+      <ng-container slot="title">{{ "yourVaultIsEmpty" | i18n }}</ng-container>
+      <ng-container slot="description">{{ "autofillSuggestionsTip" | i18n }}</ng-container>
+      <button slot="button" type="button" bitButton buttonType="primary" (click)="addCipher()">
+        {{ "new" | i18n }}
+      </button>
+    </bit-no-items>
+  </div>
+
+  <ng-container *ngIf="!(showEmptyState$ | async)">
+    <!-- TODO: Filter/search Section in PM-6824 and PM-6826.-->
+
+    <div
+      *ngIf="showNoResultsState$ | async"
+      class="tw-flex tw-flex-col tw-h-full tw-justify-center"
+    >
+      <bit-no-items>
+        <ng-container slot="title">{{ "noItemsMatchSearch" | i18n }}</ng-container>
+        <ng-container slot="description">{{ "clearFiltersOrTryAnother" | i18n }}</ng-container>
+      </bit-no-items>
+    </div>
+
+    <ng-container *ngIf="!(showNoResultsState$ | async)">
+      <app-autofill-vault-list-items></app-autofill-vault-list-items>
+      <app-vault-list-items-container
+        title="Favorites"
+        [ciphers]="favoriteCiphers$ | async"
+      ></app-vault-list-items-container>
+      <app-vault-list-items-container
+        title="All items"
+        [ciphers]="remainingCiphers$ | async"
+      ></app-vault-list-items-container>
+    </ng-container>
+  </ng-container>
 </popup-page>
