PM-4951 Addressed review comments

--- a/apps/web/src/app/auth/recover-two-factor.component.html
+++ b/apps/web/src/app/auth/recover-two-factor.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="formGroup" [bitSubmit]="submit">
-  <div class="tw-w-[400px]">
+  <div class="tw-w-96">
     <p bitTypography="body1">
       {{ "recoverAccountTwoStepDesc" | i18n }}
       <a
