--- a/apps/browser/src/platform/popup/components/pop-out.component.html
+++ b/apps/browser/src/platform/popup/components/pop-out.component.html
@@ -1,5 +1,15 @@
-<ng-container *ngIf="show">
+<ng-container *ngIf="show && !useV2Variant">
   <button type="button" (click)="expand()" appA11yTitle="{{ 'popOutNewWindow' | i18n }}">
     <i class="bwi bwi-external-link bwi-rotate-270 bwi-lg bwi-fw" aria-hidden="true"></i>
   </button>
+</ng-container>
+<ng-container *ngIf="show && useV2Variant">
+  <button
+    bitIconButton="bwi-popout"
+    size="small"
+    type="button"
+    appA11yTitle="{{ 'popOutNewWindow' | i18n }}"
+    [title]="'popOutNewWindow' | i18n"
+    (click)="expand()"
+  ></button>
 </ng-container>
