--- a/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
+++ b/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
@@ -1,1 +1,12 @@
-<h1>Vault V2 Extension Refresh</h1>
+<popup-page>
+  <popup-header slot="header" [pageTitle]="'vault' | i18n">
+    <ng-container slot="end">
+      <button bitButton buttonType="primary" type="button" (click)="addCipher()">
+        <i class="bwi bwi-plus-f" aria-hidden="true"></i>
+        {{ "new" | i18n }}
+      </button>
+      <app-pop-out [useV2Variant]="true"></app-pop-out>
+      <app-current-account></app-current-account>
+    </ng-container>
+  </popup-header>
+</popup-page>
