[PM-6825] Fix missing button type

--- a/apps/browser/src/vault/popup/components/vault-v2/vault-list-item/vault-list-item.component.html
+++ b/apps/browser/src/vault/popup/components/vault-v2/vault-list-item/vault-list-item.component.html
@@ -1,5 +1,5 @@
 <bit-item>
-  <button bit-item-content (click)="openCipher()">
+  <button bit-item-content (click)="openCipher()" type="button">
     <app-vault-icon slot="start" [cipher]="cipher"></app-vault-icon>
     {{ cipher.name }}
     <span slot="secondary">{{ cipher.subTitle }}</span>
