[AC-2613] Fix copy for providers in Collections tabs

--- a/apps/web/src/app/admin-console/organizations/members/components/member-dialog/member-dialog.component.html
+++ b/apps/web/src/app/admin-console/organizations/members/components/member-dialog/member-dialog.component.html
@@ -426,7 +426,7 @@
           </div>
           <div *ngIf="organization.useGroups && !(restrictEditingSelf$ | async)" class="tw-mb-6">
             {{ "userPermissionOverrideHelperDesc" | i18n }}
-            <span *ngIf="!(allowAdminAccessToAllCollectionItems$ | async)">
+            <span *ngIf="!(canEditAnyCollection$ | async)">
               {{ "restrictedCollectionAssignmentDesc" | i18n }}
             </span>
           </div>
