--- a/apps/web/src/app/admin-console/organizations/manage/group-add-edit.component.html
+++ b/apps/web/src/app/admin-console/organizations/manage/group-add-edit.component.html
@@ -33,7 +33,7 @@
         <bit-tab label="{{ 'members' | i18n }}">
           <p>
             {{ "editGroupMembersDesc" | i18n }}
-            <span *ngIf="restrictGroupAccess$ | async">
+            <span *ngIf="cannotAddSelfToGroup$ | async">
               {{ "restrictedGroupAccessDesc" | i18n }}
             </span>
           </p>
@@ -52,7 +52,7 @@
         <bit-tab label="{{ 'collections' | i18n }}">
           <p>
             {{ "editGroupCollectionsDesc" | i18n }}
-            <span *ngIf="!(allowAdminAccessToAllCollectionItems$ | async)">
+            <span *ngIf="!(canEditAnyCollection$ | async)">
               {{ "restrictedCollectionAssignmentDesc" | i18n }}
             </span>
           </p>
