Login component migration

--- a/apps/web/src/app/auth/login/login.component.html
+++ b/apps/web/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
   class="tw-container"
   [formGroup]="formGroup"
 >
-  <div class="tw-rounded-xl tw-w-96 tw-bg-background tw-p-6">
+  <div class="tw-w-96">
     <ng-container *ngIf="!validatedEmail">
       <div class="tw-mb-3">
         <bit-form-field>
