--- a/apps/web/src/app/admin-console/organizations/members/components/bulk/bulk-remove.component.html
+++ b/apps/web/src/app/admin-console/organizations/members/components/bulk/bulk-remove.component.html
@@ -27,10 +27,10 @@
             </td>
             <td bitCell>
               {{ user.email }}
-              <small class="text-muted d-block" *ngIf="user.name">{{ user.name }}</small>
+              <small class="tw-text-muted tw-block" *ngIf="user.name">{{ user.name }}</small>
             </td>
             <td bitCell *ngIf="this.showNoMasterPasswordWarning">
-              <span class="text-muted d-block tw-lowercase">
+              <span class="tw-text-muted tw-block tw-lowercase">
                 <ng-container *ngIf="user.hasMasterPassword === true"> - </ng-container>
                 <ng-container *ngIf="user.hasMasterPassword === false">
                   <i class="bwi bwi-exclamation-triangle" aria-hidden="true"></i>
@@ -57,7 +57,7 @@
             </td>
             <td bitCell>
               {{ user.email }}
-              <small class="text-muted d-block" *ngIf="user.name">{{ user.name }}</small>
+              <small class="tw-text-muted tw-block" *ngIf="user.name">{{ user.name }}</small>
             </td>
             <td *ngIf="statuses.has(user.id)" bitCell>
               {{ statuses.get(user.id) }}
@@ -77,7 +77,7 @@
       type="submit"
       buttonType="primary"
       [disabled]="loading"
-      (click)="submit()"
+      [bitAction]="submit"
     >
       {{ "removeUsers" | i18n }}
     </button>
