--- a/apps/web/src/app/admin-console/organizations/reporting/reports-home.component.html
+++ b/apps/web/src/app/admin-console/organizations/reporting/reports-home.component.html
@@ -8,11 +8,9 @@
 
 <router-outlet></router-outlet>
 
-<div class="tw-grid tw-grid-cols-12 tw-gap-4 tw-mt-4">
-  <div class="tw-col-span-6">
-    <a bitButton routerLink="./" *ngIf="!(homepage$ | async)">
-      <i class="bwi bwi-angle-left" aria-hidden="true"></i>
-      {{ "backToReports" | i18n }}
-    </a>
-  </div>
+<div class="tw-mt-4">
+  <a bitButton routerLink="./" *ngIf="!(homepage$ | async)">
+    <i class="bwi bwi-angle-left" aria-hidden="true"></i>
+    {{ "backToReports" | i18n }}
+  </a>
 </div>
