--- a/apps/browser/src/vault/popup/components/vault-v2/autofill-vault-list-items/autofill-vault-list-items.component.html
+++ b/apps/browser/src/vault/popup/components/vault-v2/autofill-vault-list-items/autofill-vault-list-items.component.html
@@ -6,12 +6,7 @@
 ></app-vault-list-items-container>
 <ng-container *ngIf="showEmptyAutofillTip$ | async">
   <bit-section>
-    <!-- Temporary will be replaced with popup-section-header -->
-    <h2 bitTypography="h6" class="tw-flex">
-      <span class="tw-flex-grow tw-text-primary-700 tw-font-bold">{{
-        "autofillSuggestions" | i18n
-      }}</span>
-    </h2>
+    <popup-section-header [title]="'autofillSuggestions' | i18n"></popup-section-header>
     <span class="tw-text-muted">{{ "autofillSuggestionsTip" | i18n }}</span>
   </bit-section>
 </ng-container>
