[PM-6825] Use small variant for icon buttons

--- a/apps/browser/src/vault/popup/components/vault-v2/vault-list-item/vault-list-item.component.html
+++ b/apps/browser/src/vault/popup/components/vault-v2/vault-list-item/vault-list-item.component.html
@@ -9,10 +9,10 @@
       <button type="button" bitBadge variant="primary">Auto-fill</button>
     </bit-item-action>
     <bit-item-action>
-      <button type="button" bitIconButton="bwi-clone"></button>
+      <button type="button" bitIconButton="bwi-clone" size="small"></button>
     </bit-item-action>
     <bit-item-action>
-      <button type="button" bitIconButton="bwi-ellipsis-v"></button>
+      <button type="button" bitIconButton="bwi-ellipsis-v" size="small"></button>
     </bit-item-action>
   </ng-container>
 </bit-item>
