--- a/apps/browser/src/platform/popup/components/pop-out.component.html
+++ b/apps/browser/src/platform/popup/components/pop-out.component.html
@@ -1,9 +1,9 @@
-<ng-container *ngIf="show && !useV2Variant">
+<ng-container *ngIf="show && !useRefreshVariant">
   <button type="button" (click)="expand()" appA11yTitle="{{ 'popOutNewWindow' | i18n }}">
     <i class="bwi bwi-external-link bwi-rotate-270 bwi-lg bwi-fw" aria-hidden="true"></i>
   </button>
 </ng-container>
-<ng-container *ngIf="show && useV2Variant">
+<ng-container *ngIf="show && useRefreshVariant">
   <button
     bitIconButton="bwi-popout"
     size="small"
