Move sync functionality to vault-settings-v2

--- a/apps/browser/src/vault/popup/settings/vault-settings-v2.component.html
+++ b/apps/browser/src/vault/popup/settings/vault-settings-v2.component.html
@@ -25,9 +25,10 @@
       </button>
     </bit-item>
     <bit-item>
-      <button type="button" bit-item-content routerLink="/sync">
-        {{ "sync" | i18n }}
-        <i slot="end" class="bwi bwi-angle-right" aria-hidden="true"></i>
+      <button type="button" bit-item-content (click)="sync()">
+        {{ "syncVaultNow" | i18n }}
+        <span slot="secondary">{{ lastSync }}</span>
+        <i slot="end" class="bwi bwi-refresh" aria-hidden="true"></i>
       </button>
     </bit-item>
   </bit-item-group>
